# spy-tests

./: README.md  dca_backtest.py  pyproject.toml  snp10_backtest.py
.data_cache/: dca_prices.parquet  dca_spy.parquet  prices.parquet  shares.json  spy.parquet
output/: dca_performance_summary.csv  dca_trade_log.csv  performance_summary.csv  trade_log.csv
